--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = inventories/localhost.yml
 collections_paths = ./collections
+roles_path = ./roles
 retry_files_enabled = False
 stdout_callback = yaml
 interpreter_python = auto_silent
