--- a/roles/provision_windows_ssh/tasks/main.yml
+++ b/roles/provision_windows_ssh/tasks/main.yml
@@ -28,6 +28,12 @@
       {{ route53_record if route53_record | default('') | length > 0 else (normalized_route53_zone | length > 0 | ternary(instanceName ~ '.' ~ normalized_route53_zone, instanceName)) }}
     derived_tags: "{{ (aws_tags | default({})) | combine({'Name': instanceName}) }}"
 
+- name: Coerce runtime booleans and integers
+  ansible.builtin.set_fact:
+    assign_public_ip_bool: "{{ assign_public_ip | bool }}"
+    wait_for_ssh_timeout_int: "{{ wait_for_ssh_timeout | int }}"
+    route53_ttl_int: "{{ route53_ttl | int }}"
+
 - name: Build SSH ingress rule set
   ansible.builtin.set_fact:
     ssh_ingress_rules: []
@@ -114,7 +120,7 @@
     wait: true
     wait_timeout: 900
     key_name: "{{ omit }}"
-    assign_public_ip: {{ assign_public_ip | bool }}
+    assign_public_ip: "{{ assign_public_ip_bool | bool }}"
     tags: "{{ derived_tags }}"
     volumes:
       - device_name: "{{ aws_root_device_name }}"
@@ -129,14 +135,14 @@
   ansible.builtin.set_fact:
     ssh_wait_host: >-
       {{ ec2_instance.instances[0].public_ip_address
-         if assign_public_ip | bool and ec2_instance.instances[0].public_ip_address is defined
+         if assign_public_ip_bool | bool and ec2_instance.instances[0].public_ip_address is defined
          else ec2_instance.instances[0].private_ip_address }}
 
 - name: Wait until sshd is reachable on new instance
   ansible.builtin.wait_for:
     host: "{{ ssh_wait_host }}"
     port: 22
-    timeout: {{ wait_for_ssh_timeout }}
+    timeout: "{{ wait_for_ssh_timeout_int | int }}"
     delay: 30
   when: ec2_instance.changed | bool
 
@@ -177,7 +183,7 @@
     zone_id: "{{ route53_zone_id if (route53_zone_id | default('') | length > 0) else omit }}"
     record: "{{ derived_route53_record }}"
     type: A
-    ttl: {{ route53_ttl }}
+    ttl: "{{ route53_ttl_int | int }}"
     overwrite: true
     value: "{{ ssh_wait_host }}"
   when: route53_enabled | bool
