--- a/roles/provision_windows_ssh/tasks/main.yml
+++ b/roles/provision_windows_ssh/tasks/main.yml
@@ -164,12 +164,9 @@
     region: "{{ aws_region }}"
     instance_type: "{{ aws_instance_type }}"
     image_id: "{{ resolved_ami_id }}"
-    subnet_id: "{{ aws_subnet_id }}"
-    security_group_ids: "{{ effective_security_group_ids }}"
     wait: true
     wait_timeout: 900
     key_name: "{{ omit }}"
-    assign_public_ip: "{{ assign_public_ip_bool | bool }}"
     tags: "{{ derived_tags }}"
     volumes:
       - device_name: "{{ aws_root_device_name }}"
@@ -178,6 +175,10 @@
           volume_type: "{{ aws_volume_type }}"
           delete_on_termination: true
     user_data: "{{ windows_user_data }}"
+    network_interfaces:
+      - subnet_id: "{{ aws_subnet_id }}"
+        assign_public_ip: {{ assign_public_ip_bool | bool }}
+        groups: {{ effective_security_group_ids }}
   register: ec2_instance
 
 - name: Determine target address for SSH wait
