--- a/roles/provision_windows_ssh/tasks/main.yml
+++ b/roles/provision_windows_ssh/tasks/main.yml
@@ -167,7 +167,7 @@
     wait: true
     wait_timeout: 900
     key_name: "{{ omit }}"
-    security_groups: {{ effective_security_group_ids }}
+    security_groups: "{{ effective_security_group_ids | to_json | from_json }}"
     vpc_subnet_id: "{{ aws_subnet_id }}"
     tags: "{{ derived_tags }}"
     volumes:
