--- a/roles/provision_windows_ssh/tasks/main.yml
+++ b/roles/provision_windows_ssh/tasks/main.yml
@@ -194,6 +194,16 @@
     delay: 30
   when: ec2_instance.changed | bool
 
+- name: Debug Vault authentication context (do not use in production)
+  ansible.builtin.debug:
+    msg:
+      vault_addr: "{{ vault_addr_effective }}"
+      vault_namespace: "{{ vault_namespace_effective }}"
+      vault_role_id: "{{ vault_role_id }}"
+      vault_secret_id: "{{ vault_secret_id }}"
+      vault_kv_mount: "{{ vault_kv_mount }}"
+      vault_secret_path: "{{ derived_vault_secret_path }}"
+
 - name: Store private key in HashiCorp Vault
   community.hashi_vault.vault_kv2_write:
     url: "{{ vault_addr_effective }}"
